--- a/.github/workflows/Surge.yml
+++ b/.github/workflows/Surge.yml
@@ -1,25 +1,42 @@
-name: Deploy React Site
-on: [push]
+# This is a basic workflow to help you get started with Actions
+
+name: React App Deploy to Surge
+
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    name: Deploy to surge
-    steps: 
-      - uses: actions/checkout@v2
-      - name: Install Node.js
-        uses: actions/setup-node@v2-beta
-        with:
-          node-version: 12
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+    
+    - name: Install NodeJS
+      uses: actions/setup-node@v2-beta
+      with:
+        node-version: 12
+    
+    - uses: borales/actions-yarn@v2.0.0
+      with:
+        cmd: install # will run `yarn install` command
+        
+    - name: Build React App
+      run: yarn build
       
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: install # will run `yarn install` command
-        
-      - name: Build React App
-        run: yarn build
-        
-      - name: Install Surge
-        run: npm install -g surge
-        
-      - name: Deploy to surge
-        run: surge ./build assignment2-by-gopaldas.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+    - name: Install Surge
+      run: npm install --global surge
+
+    - name: Deploy to Surge
+#       run: surge ./build project003-adil.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      run: surge ./build assignment2-by-gopaldas.surge.sh --token ${{ secrets.SURGE_TOKEN }}
