--- a/.github/workflows/Surge.yml
+++ b/.github/workflows/Surge.yml
@@ -1,14 +1,13 @@
 # This is a basic workflow to help you get started with Actions
 
-name: React App Deploy to Surge
+name: Deploy React App on Surge with Yarn
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -26,17 +25,18 @@ jobs:
       uses: actions/setup-node@v2-beta
       with:
         node-version: 12
-    
+        
     - uses: borales/actions-yarn@v2.0.0
       with:
-        cmd: install # will run `yarn install` command
+        cmd: install
         
     - name: Build React App
       run: yarn build
       
+    # Install Surge
     - name: Install Surge
       run: npm install --global surge
-
-    - name: Deploy to Surge
-#       run: surge ./build project003-adil.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+    
+    # Deploy Surge
+    - name: Deploy React App to Surge
       run: surge ./build assignment2-by-gopaldas.surge.sh --token ${{ secrets.SURGE_TOKEN }}
